--- a/deploy.yml
+++ b/deploy.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: copy war into tomcat
       copy:
-        src: /home/ec2-user/Manavae-web-app-2/Java-Ansible/target/Java-Ansible.war
+        src: Java-Ansible.war
         dest: /usr/local/tomcat/webapps
     - name: Starting tomcat
       shell: nohup /usr/local/tomcat/bin/startup.sh &
